<resources>
    <string name="app_name">Coffe Machine</string>
    <string name="title">P3 Coffe Machine</string>
    <string name="actions">(buy, fill, take, remaining, exit)</string>
    <string name="coffes">What do you want to buy? 1 - espresso, 2 - latte, 3 - cappuccino:</string>
    <string name="succes">I have enough resources, making you a coffee!</string>
    <string name="errW">Sorry, not enough Water!</string>
    <string name="errM">Sorry, not enough Milk!</string>
    <string name="errB">Sorry, not enough Coffe Beans!</string>
    <string name="errC">Sorry, not enough Coffe Cups!</string>
    <string name="admin">Hello Admin, please inpunt the new resources!</string>
    <string name="buy">BUY</string>
    <string name="fill">FILL</string>
    <string name="take">TAKE</string>
    <string name="reso">REMAINING</string>
    <string name="exit">EXIT</string>
    <string name="back">BACK</string>
    <string name="coffe1">EXPRESSO</string>
    <string name="coffe2">LATTE</string>
    <string name="coffe3">CAPPUCCINO</string>
    <string name="res_water">ADD WATER!</string>
    <string name="res_milk">ADD MILK!</string>
    <string name="res_beans">ADD BEANS!</string>
    <string name="res_cups">ADD CUPS!</string>
    <string name="add_resources">ADD RESOURCES</string>
    <string name="remaining_header">The coffe machine has:</string>
    <string name="resw">%d ml of water</string>
    <string name="resm">%d ml of milk</string>
    <string name="resb">%d grams of coffe beans</string>
    <string name="resc">%d cups</string>
    <string name="resd">%d RON</string>
</resources>